bug fix - text hiding behind header when not logged in

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -47,7 +47,7 @@ html, body {
 }
 
 #wrapper > .container, #wrapper > .container-fluid {
-	padding-top: 0px;
+	padding-top: 60px;
 	padding-bottom: 60px;
 	overflow: auto;
 }
